Replace GenericCompositeFuture with Future